@@ -39,25 +39,6 @@
             <version>1.3.0</version>
         </dependency>
 
-<!--        Added the jar to the libs folder, link to source webpage is here-->
-<!--            https://www.cs.cmu.edu/~alavie/METEOR/README.html and here-->
-<!--            https://www.cs.cmu.edu/~alavie/METEOR/-->
-<!--        But it seems to be more involved than expected-->
-<!--        <dependency>-->
-<!--            <groupId>edu.cmu</groupId>-->
-<!--            <artifactId>meteor</artifactId>-->
-<!--            <version>1.5</version>-->
-<!--        </dependency>-->
-
-<!--        In order for this to work clone the trustyai repo from github-->
-<!--        https://github.com/trustyai-explainability/trustyai-explainability-->
-<!--        and mvn install the explainability-core package-->
-<!--        <dependency>-->
-<!--            <groupId>org.kie.trustyai</groupId>-->
-<!--            <artifactId>explainability-core</artifactId>-->
-<!--            <version>999-SNAPSHOT</version>-->
-<!--        </dependency>-->
-
         <!-- https://mvnrepository.com/artifact/org.apache.opennlp/opennlp-models-sentdetect-en -->
         <dependency>
             <groupId>org.apache.opennlp</groupId>
@@ -70,6 +51,28 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.12.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j-jlama</artifactId>
+            <version>${langchain4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.github.tjake</groupId>
+            <artifactId>jlama-native</artifactId>
+            <!-- for faster inference. supports linux-x86_64, macos-x86_64/aarch_64, windows-x86_64
+                Use https://github.com/trustin/os-maven-plugin to detect os and arch -->
+            <!--suppress UnresolvedMavenProperty -->
+            <classifier>${os.detected.name}-${os.detected.arch}</classifier>
+            <version>0.5.0</version> <!-- Version from langchain4j-jlama pom -->
+        </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>org.projectlombok</groupId>-->
+<!--            <artifactId>lombok</artifactId>-->
+<!--            <version>1.18.30</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -202,13 +205,45 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --enable-preview
+                        --add-modules jdk.incubator.vector
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+                    <compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>jdk.incubator.vector</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        @{argLine}
+                        --enable-preview
+                        --add-modules jdk.incubator.vector
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.7.0</version>
+            </extension>
+        </extensions>
     </build>
 
 </project>
